improvements
- migrate to java 16
- update a few dependencies