@@ -8,7 +8,8 @@
   <version>21-SNAPSHOT</version>
 
   <properties>
-    <java.version>15</java.version>
+    <java.version>16</java.version>
+    <checkstyle.version>8.41</checkstyle.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
@@ -90,18 +91,17 @@
           <release>${java.version}</release>
           <source>${java.version}</source>
           <target>${java.version}</target>
-          <compilerArgs>--enable-preview</compilerArgs>
         </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-checkstyle-plugin</artifactId>
-        <version>3.1.1</version>
+        <version>3.1.2</version>
         <dependencies>
           <dependency>
             <groupId>com.puppycrawl.tools</groupId>
             <artifactId>checkstyle</artifactId>
-            <version>8.40</version>
+            <version>${checkstyle.version}</version>
           </dependency>
         </dependencies>
         <executions>
@@ -145,7 +145,7 @@
     <dependency>
       <groupId>com.puppycrawl.tools</groupId>
       <artifactId>checkstyle</artifactId>
-      <version>8.40</version>
+      <version>${checkstyle.version}</version>
     </dependency>
     <dependency>
       <groupId>com.google.code.gson</groupId>
@@ -155,13 +155,13 @@
     <dependency>
       <groupId>net.bytebuddy</groupId>
       <artifactId>byte-buddy-agent</artifactId>
-      <version>1.10.21</version>
+      <version>1.10.22</version>
     </dependency>
     <!--    Testing Framework-->
     <dependency>
       <groupId>academy.kovalevskyi</groupId>
       <artifactId>TestingFramework</artifactId>
-      <version>15</version>
+      <version>19</version>
     </dependency>
     <!--    Courses add below-->
     <dependency>
